assets/frontend/mpwpb_registration.css
:root {
  --mage-primary:#f12971;
  --mage-light:#F2F2F2;
  --mage-black: #000;
  --mage-white: #FFFFFF;
  --mage-border: #DDD;
}

div.registration_tab_item {
  -webkit-transition: all 350ms ease-in-out;
  -moz-transition: all 350ms ease-in-out;
  -o-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
}

/******************************************************************** ************************************************/
.mpwpb_registration_short_code.mpwpb-static-template .sidebar{width: 100%;}
.mpwpb_registration_short_code.mpwpb-static-template .sidebar .mpwpb_static_area{width: 100%;position: relative;left: inherit;  bottom: inherit;}

.mpwpd_category_info_holder{
  display: flex;
  justify-content: space-between;
  width: 100%;
}
.mpwpd_item_box_direction{
  flex-direction: column;
}
.mpwpd_category_min_price{
  padding: 8px 0px;
  color: var(--mpwpb_color_theme);
  font-weight:bold;
}
.mpwpd_category_data_pos{
  flex-direction: column;
}

.mpwpb_category_info{
  display: flex;
  width: 100%;
  justify-content: space-between;
}
.mpwpd_category_info_holder .mpwpb_category_info h6{
  font-weight:700;
}
.mpwpd_bg_image_area{
  max-width: 50px;
  margin: 0 8px 0 0;
  width: 100%;
  overflow: hidden;
  position: relative;
  height: max-content;
}

.mpwpb_category_info_holder{
  display: flex;
  width: 100%;
  flex-direction: column;
}
.mpwpb_category_name_icon{
  display: flex;
  justify-content: flex-start;
}

.mpwpd_btn_proceed {
  display: block;
  width: calc(100% - 16px);
  margin: 0px 8px 0px;
  padding: 10px;
  background: #db4366;
  color: white;
  border: none;
  border-radius: 8px;
  font-weight: 600;
  cursor: pointer;
  /* transition: var(--transition); */
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  opacity: .5;
}
.mpwpb_service_button_remove,
.mpwpb_ex_service_button_remove{
  position: absolute;
  /*right: -10px;
  top: 50%;*/
  right: -54px;
  top: -10px;
  transform: translateY(-50%);
  background-color: #ff5252;
  color: white;
  border: none;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.3s, transform 0.3s;
}

.mpwpb_summary_item:hover .mpwpb_service_button_remove{
  opacity: 1;
}
.mpwpb_summary_item:hover .mpwpb_ex_service_button_remove{
  opacity: 1;
}

.mpwpb_recurring_order_display{
  display: flex;
  flex-direction: column;
  padding-top: 10px;
}
.mpwpb_recurring_order_text_number, .mpwpb_recurring_discount{
  display: flex;
  justify-content: space-between;
  padding-right: 40px;
}
.mpwpb_recurring_number_holder{
  display: flex;
  gap: 16px;
}
.mpwpb_style .next_service_area .mpwpb_service_next, .mpwpb_style .next_service_area .mpwpb_service_next{
  color: #fff;
}

.mpwpd_service_date{
  list-style-type: none;
}
.mpwpd_service_date_selected{
  color: #990000;
}

.selection-header {
  margin:10px 0;
}
.mpwpb_selected_control{
  display: flex;
  gap: 7px;
  flex-wrap: wrap;
  justify-content: left;
  color: #767373;
  font-size: 16px;
  padding: 5px 0;
  /*background:#fff;*/
  /*border:1px solid #ddd;*/
  border-radius:10px;
}

/*.addonGroupContent{
  border: 1px solid;
  padding: 8px;
  border-radius: 3px;
}*/

.mpwpb_text_icon_holder{
  display: flex;
  gap: 5px;
}
.mpwpb_selected_category{
  cursor: pointer;
  font-weight: 600;

}
.mpwpb_selected_category:hover{
  color: #333333;
}

.mpwpd_padding_bottom{
  padding-bottom: 10px;
}

@media only screen and (min-width: 10px) {
  div.mpwpb_registration .woocommerce-page span.woocommerce-input-wrapper,
  div.mpwpb_registration .woocommerce-page table span {
    display: initial;
  }
  div.mpwpb_registration .woocommerce-page label {
    margin: 0 0 var(--mpwpb_dmp_xs) 0;
  }
  div.mpwpb_registration table th,
  div.mpwpb_registration table td {
    border: none;
  }
  div.mpwpb_registration .woocommerce form .form-row {
    margin-bottom: var(--mpwpb_dmp_xs);
  }
  div.mpwpb_registration #customer_details {
    background-color: #F7F7F7;
    padding: var(--mpwpb_dmp_xs);
    margin: 0;
  }
  div.mpwpb_registration #order_review {
    background-color: #FFF;
    padding: 0 !important;
    margin: 0 !important;
    border: none !important;
  }
  div.mpwpb_registration .mpwpb_order_details_area {
    background-color: #FFF;
    padding: var(--mpwpb_dmp_xs) var(--mpwpb_dmp_xs) var(--mpwpb_dmp_xs) var(--mpwpb_dmp);
    margin: 0;
  }
  div.mpwpb_registration .woocommerce-page input[type=radio].shipping_method + label,
  div.mpwpb_registration .woocommerce-page input[type=radio][name=payment_method] + label {
    display: inline-block;
  }
  div.mpwpb_registration .woocommerce #payment #place_order,
  div.mpwpb_registration .woocommerce-page #payment #place_order {
    margin: var(--mpwpb_dmp_xs) 0;
  }

  div.mpwpb_registration .service-items{
    border-radius: 10px ;
  }

}
/* ... */

